@@ -11,7 +11,9 @@
 <h2>Summary</h2>
 
 <p>
-  v 5.1.0 is a bug fix release.
+  Starting with 5.1.0, packages for Windows and Mac OS X are released
+  under the terms of GPL. The source code tree includes all files
+  necessary to build on Linux, *BSD, Windows and Mac OS X.
 </p>
 
 
@@ -112,6 +114,14 @@
     </p>
   </li>
 
+  <li>
+    <p>
+      running autoconf, configure as part of windows build. Merged
+      qmake .pro and .inc files for Windows, Mac and Linux
+      builds. Moved files needed for Windows and Mac packaging to the
+      "packaging" directory.
+    </p>
+  </li>
 </ul>
 
 
