@@ -1,3 +1,10 @@
+2012-03-21  Vadim Kurland  <vadim@netcitadel.com>
+
+	* running autoconf, configure as part of windows build. Merged
+	qmake .pro and .inc files for Windows, Mac and Linux builds. Moved
+	files needed for Windows and Mac packaging to the "packaging"
+	directory.
+
 2012-03-19  Vadim Kurland  <vadim@netcitadel.com>
 
 	* version 5.1.0
